[package]
name = "stash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4"
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
rust-argon2 = "1.0.0"
serde = { version = "1.0.171", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4"] }
